# train-scheduler

./: .gitignore  .prettierrc.json  README.md  docker-compose.yaml  eslint.config.js  index.html  package-lock.json  package.json  pyproject.toml
api/: connect.py  domain.py  dummy.py  main.py  requests.py  responses.py
api/domain/: DummyData.py  Post.py  Ticket.py  Train.py
app/: App.jsx  config.js  main.jsx  styles.css
app/closures/: UserProfile.js
app/components/: BuyTicket.jsx  Home.jsx  Login.jsx  ManageTicket.jsx  TicketCard.jsx  Tickets.jsx  TrainCard.jsx  TrainDetails.jsx  TrainLocation.jsx
gui/: package-lock.json  package.json
gui/src/: App.js  index.js  styles.css
gui/src/closures/: UserProfile.js
gui/src/components/: Login.js  TicketCard.js  Tickets.js  TrainLocation.js
scripts/: clear_db.py  run_tests.py  run_trains.py  seed_db.py
src/: run_trains.py
src/objects/: Train.py
src/scripts/: Train.py
tests/: test_stress.py
