[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
numpy = "^1.26.4"
cassandra-driver = "^3.29.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
